# classfile-parser

./: .gitignore  Cargo.toml  README.md
examples/: compile_patch.rs  decompile_jar.rs  jar_explorer.rs  jar_patch.rs
java-assets/: compile.sh
java-assets/src/: Annotations.java  NestExample.java  ParamAccess.java  PrependTest.java  RecordExample.java  SealedExample.java
src/: lib.rs  parser.rs  types.rs
src/attribute_info/: mod.rs  parser.rs  types.rs
src/code_attribute/: mod.rs  parser.rs  types.rs
src/compile/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs  patch.rs  stack_calc.rs  stackmap.rs
src/constant_info/: mod.rs  parser.rs  types.rs
src/decompile/: cfg.rs  cfg_types.rs  class_decompiler.rs  descriptor.rs  desugar.rs  expr.rs  java_ast.rs  mod.rs  renderer.rs  stack_sim.rs  structured_types.rs  structuring.rs  type_inference.rs  util.rs
src/field_info/: mod.rs  parser.rs  types.rs
src/jar_patch/: mod.rs
src/jar_utils/: manifest.rs  mod.rs  types.rs
src/method_info/: mod.rs  parser.rs  types.rs
src/spring_utils/: classpath_idx.rs  layers_idx.rs  mod.rs  types.rs
tests/: attr_bootstrap_methods.rs  attr_stack_map_table.rs  classfile.rs  code_attribute.rs  compile.rs  decompile.rs  e2e_patch.rs  jar_patch.rs  jar_utils.rs  module_attribute.rs  new_attributes.rs  patching_helpers.rs  spring_utils.rs
tests/compiler/: e2e.rs  main.rs  param_access.rs  parser.rs  prepend.rs  stress.rs
