[package]
name = "classfile-parser"
description = "A parser for Java Class files written in rust"
version = "0.3.9"
edition = "2024"
authors = ["Nick Palmer <nick@palmr.co.uk>"]
keywords = ["java", "parsing", "class", "classfile"]
categories = ["parser-implementations"]
repository = "https://github.com/Palmr/classfile-parser"
readme = "README.md"
license = "MIT"
exclude = ["java-assets/out/**/*"]

[package.metadata.docs.rs]
all-features = true

[features]
decompile = []
compile = ["decompile"]
jar-utils = ["dep:zip"]
jar-patch = ["compile", "jar-utils"]
spring-utils = ["jar-utils"]
tui-example = ["jar-utils", "spring-utils", "decompile", "dep:ratatui", "dep:crossterm", "dep:tui-textarea"]

[dependencies]
bitflags = "^2.3"
cesu8 = "^1.1"
binrw = "0.15.0"
zip = { version = "8.1", optional = true }
ratatui = { version = "0.29", features = ["crossterm"], optional = true }
crossterm = { version = "0.28", optional = true }
tui-textarea = { version = "0.7", features = ["crossterm", "search"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3"

[[example]]
name = "jar_explorer"
required-features = ["tui-example"]

[[example]]
name = "compile_patch"
required-features = ["compile"]

[[example]]
name = "jar_patch"
required-features = ["jar-patch"]
